# ai-exam

./: CMakeLists.txt  Car.cpp  Car.h  Diagnostic.cpp  Diagnostic.h  GarageMonitor.cpp  GarageMonitor.h  README.md  diagnostics.csv  main.cpp  refactoring.cpp  refactoring.cpp.cpp  tests.cpp
